GoodLive的Home页面搭建完成，通过结合后端服务器对请求到的数据进行渲染

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,31 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script>
+      (function (doc, win) {
+        var docE1 = doc.documentElement,
+          resizeEvt =
+            'orientationchange' in window ? 'orientationonchange' : 'resize',
+          recalc = function () {
+            var clientWidth = docE1.clientWidth;
+            if (!clientWidth) {
+              return;
+            }
+            if (clientWidth > 750) {
+              docE1.style.fontSize = '10px';
+            } else {
+              docE1.style.fontSize = 100 * (clientWidth / 750) + 'px';
+            }
+          };
+        if (!docE1.addEventListener) {
+          return;
+        }
+        win.addEventListener(resizeEvt, recalc, false);
+        doc.addEventListener('DOMContentLoaded', recalc, false);
+      })(document, window);
+    </script>
+
+    <script src="https://cdn.bootcdn.net/ajax/libs/feather-icons/4.9.0/feather.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
